2019-1/221/users/4101/executions/1766_1580.log
== TEST (2019-05-29 15:12:39) 
-- CODE:
from numpy import*
vn = array(eval(input()))
va = array()

i==0
aa==0
ar==0
af==0
s == 0
ap == 0
while(i < size(vn)):
	if(vn[i]>=6):
		i = i + 1
		aa = aa + 1
		ap == ap + 1
	if(0<=vn[i]<6):
		i = i + 1
		ar == ar + 1
		ap == ap + 1
	if(vn[i]==-1):
		i = i + 1
		af == af + 1
	if(0=<vn[i]<=10):
		s == s + vn[i]
	if(vn[i]==max(vn)):
		msg == va[i]
print(af)
print(aa)
print(ar)
print(round(s/ap, 2))
print(msg)

		
-- ERROR:
File "XXXX", line 23
    if(0=<vn[i]<=10):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:13:06) 
-- CODE:
from numpy import*
vn = array(eval(input()))
va = array()

i==0
aa==0
ar==0
af==0
s == 0
ap == 0
while(i < size(vn)):
	if(vn[i]>=6):
		i = i + 1
		aa = aa + 1
		ap == ap + 1
	if(0<=vn[i]<6):
		i = i + 1
		ar == ar + 1
		ap == ap + 1
	if(vn[i]==-1):
		i = i + 1
		af == af + 1
	if(0<=vn[i]<=10):
		s == s + vn[i]
	if(vn[i]==max(vn)):
		msg == va[i]
print(af)
print(aa)
print(ar)
print(round(s/ap, 2))
print(msg)

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:15:13) 
-- CODE:
from numpy import*
vn = array(eval(input()))
va = array(eval(input()))

i==0
aa==0
ar==0
af==0
s == 0
ap == 0
while(i < size(vn)):
	if(vn[i]>=6):
		i = i + 1
		aa = aa + 1
		ap == ap + 1
	if(0<=vn[i]<6):
		i = i + 1
		ar == ar + 1
		ap == ap + 1
	if(vn[i]==-1):
		i = i + 1
		af == af + 1
	if(0<=vn[i]<=10):
		s == s + vn[i]
	if(vn[i]==max(vn)):
		msg == va[i]
print(af)
print(aa)
print(ar)
print(round(s/ap, 2))
print(msg)

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:16:36) 
-- CODE:
from numpy import*
vn = array(eval(input()))
va = array(eval(input()))

i = 0
aa = 0
ar = 0
af = 0
s = 0
ap = 0

while(i < size(vn)):
	if(vn[i]>=6):
		i = i + 1
		aa = aa + 1
		ap == ap + 1
	if(0<=vn[i]<6):
		i = i + 1
		ar == ar + 1
		ap == ap + 1
	if(vn[i]==-1):
		i = i + 1
		af == af + 1
	if(0<=vn[i]<=10):
		s == s + vn[i]
	if(vn[i]==max(vn)):
		msg == va[i]
print(af)
print(aa)
print(ar)
print(round(s/ap, 2))
print(msg)

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:16:50) 
-- CODE:
from numpy import*
vn = array(eval(input()))
va = array(eval(input()))

i = 0
aa = 0
ar = 0
af = 0
s = 0
ap = 0

while(i < size(vn)):
	if(vn[i]>=6):
		i = i + 1
		aa = aa + 1
		ap == ap + 1
	if(0<=vn[i]<6):
		i = i + 1
		ar == ar + 1
		ap == ap + 1
	if(vn[i]==-1):
		i = i + 1
		af == af + 1
	if(0<=vn[i]<=10):
		s == s + vn[i]
	if(vn[i]==max(vn)):
		msg == va[i]
print(af)
print(aa)
print(ar)
print(round(s/ap, 2))
print(msg)

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:17:45) 
-- CODE:
from numpy import*
vn = array(eval(input()))
va = array(eval(input()))
msg = 0
i = 0
aa = 0
ar = 0
af = 0
s = 0
ap = 0

while(i < size(vn)):
	if(vn[i]>=6):
		i = i + 1
		aa = aa + 1
		ap == ap + 1
	if(0<=vn[i]<6):
		i = i + 1
		ar == ar + 1
		ap == ap + 1
	if(vn[i]==-1):
		i = i + 1
		af == af + 1
	if(0<=vn[i]<=10):
		s == s + vn[i]
	if(vn[i]==max(vn)):
		msg == va[i]
print(af)
print(aa)
print(ar)
print(round(s/ap, 2))
print(msg)

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 15:22:10) 
-- CODE:
from numpy import*
vn = array(eval(input()))
va = array(eval(input()))
msg = 0
i = 0
aa = 0
ar = 0
af = 0
s = 0
ap = 0

while(i < size(vn)):
	if(vn[i]>=6):
		i = i + 1
		aa = aa + 1
		ap == ap + 1
	if(0<=vn[i]<6):
		i = i + 1
		ar == ar + 1
		ap == ap + 1
	if(vn[i]==-1):
		i = i + 1
		af == af + 1
	if(0<=vn[i]<=10):
		s == s + vn[i]
	if(vn[i]==max(vn)):
		msg == va[i]
print(af)
print(aa)
print(ar)
print(round(s/ap, 2))
print(msg)

		
-- EXECUTION TIME:
0.422635
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1766/1580/main.py", line 24, in <module>
    if(0<=vn[i]<=10):
IndexError: index 12 is out of bounds for axis 0 with size 12

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:22:42) 
-- CODE:
from numpy import*
vn = array(eval(input()))
va = array(eval(input()))
msg = 0
i = 0
aa = 0
ar = 0
af = 0
s = 0
ap = 0

while(i < size(vn)):
	if(vn[i]>=6):
		i = i + 1
		aa = aa + 1
		ap == ap + 1
	if(0<vn[i]<6):
		i = i + 1
		ar == ar + 1
		ap == ap + 1
	if(vn[i]==-1):
		i = i + 1
		af == af + 1
	if(0<=vn[i]<=10):
		s == s + vn[i]
	if(vn[i]==max(vn)):
		msg == va[i]
print(af)
print(aa)
print(ar)
print(round(s/ap, 2))
print(msg)

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 15:29:02) 
-- CODE:
from numpy import*
vn = array(eval(input()))
va = array(eval(input()))
msg = 0
i = 0
aa = 0
ar = 0
af = 0
s = 0
ap = 0

while(i < size(vn)):
	if(vn[i]>=6):
		i = i + 1
		aa = aa + 1
		ap == ap + 1
	if(0<vn[i]<6):
		i = i + 1
		ar == ar + 1
		ap == ap + 1
	if(vn[i]==-1):
		i = i + 1
		af == af + 1
	if(0<=vn[i]<=10):
		s == s + vn[i]
	if(vn[i]==max(vn)):
		msg == va[i]
print(af)
print(aa)
print(ar)
print(round(s/ap, 2))
print(msg)

		
-- EXECUTION TIME:
0.475348
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1766/1580/main.py", line 24, in <module>
    if(0<=vn[i]<=10):
IndexError: index 12 is out of bounds for axis 0 with size 12

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 15:49:01) 
-- CODE:
from numpy import*
vn = array(eval(input()))
va = array(eval(input()))
msg = 0
i = 0
aa = 0
ar = 0
af = 0
s = 0
ap = 0

while(i < size(vn)):
	if(vn[i]>=6):
		i = i + 1
		aa = aa + 1
		ap == ap + 1
	if(0<vn[i]<6):
		i = i + 1
		ar == ar + 1
		ap == ap + 1
	if(vn[i]==-1):
		i = i + 1
		af == af + 1
	if(0<=vn[i]<=10):
		s == s + vn[i]
	if(vn[i]==max(vn)):
		msg == va[i]
print(af)
print(aa)
print(ar)
print(round(s/ap, 2))
print(msg)

		
-- EXECUTION TIME:
0.479009
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1766/1580/main.py", line 24, in <module>
    if(0<=vn[i]<=10):
IndexError: index 12 is out of bounds for axis 0 with size 12

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 16:29:01) 
-- CODE:
from numpy import*
vn = array(eval(input()))
va = array(eval(input()))
msg = 0
i = 0
aa = 0
ar = 0
af = 0
s = 0
ap = 0

while(i < size(vn)):
	if(vn[i]>=6):
		i = i + 1
		aa = aa + 1
		ap == ap + 1
	if(0<vn[i]<6):
		i = i + 1
		ar == ar + 1
		ap == ap + 1
	if(vn[i]==-1):
		i = i + 1
		af == af + 1
	if(0<=vn[i]<=10):
		s == s + vn[i]
	if(vn[i]==max(vn)):
		msg == va[i]
print(af)
print(aa)
print(ar)
print(round(s/ap, 2))
print(msg)

		
-- EXECUTION TIME:
1.62564
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1766/1580/main.py", line 24, in <module>
    if(0<=vn[i]<=10):
IndexError: index 12 is out of bounds for axis 0 with size 12

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:50:03) 
-- CODE:
from numpy import*
vn = array(eval(input()))
va = array(eval(input()))
msg = 0
i = 0
aa = 0
ar = 0
af = 0
s = 0
ap = 0
while(i < size(vn)):
	if(vn[i]>=6):
		aa = aa + 1
		ap == ap + 1
		s == s + vn[i]
	elif(vn[i]<6 and vn[i]!=-1):
		ar == ar + 1
		ap == ap + 1
		s = s + vn[i]
	else:
		af == af + 1
	i = i + 1
x = ap + ar
while (vn[i] != max(vn)):
	i = i + 1
print(af)
print(aa)
print(ar)
print(round(s/x, 2))
print(va[i])

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 18:51:12) 
-- CODE:
from numpy import*
vn = array(eval(input()))
va = array(eval(input()))
msg = 0
i = 0
aa = 0
ar = 0
af = 0
s = 0
ap = 0
while(i < size(vn)):
	if(vn[i]>=6):
		aa = aa + 1
		ap == ap + 1
		s == s + vn[i]
	elif(vn[i]<6 and vn[i]!=-1):
		ar == ar + 1
		ap == ap + 1
		s = s + vn[i]
	else:
		af == af + 1
	i = i + 1
x = ap + ar
i=0
while (vn[i] != max(vn)):
	i = i + 1
print(af)
print(aa)
print(ar)
print(round(s/x, 2))
print(va[i])

		
-- EXECUTION TIME:
0.432717
-- ERROR:
/home/codebench/codes/1766/1580/main.py:30: RuntimeWarning: divide by zero encountered in long_scalars
  print(round(s/x, 2))

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 18:51:22) 
-- CODE:
from numpy import*
vn = array(eval(input()))
va = array(eval(input()))
msg = 0
i = 0
aa = 0
ar = 0
af = 0
s = 0
ap = 0
while(i < size(vn)):
	if(vn[i]>=6):
		aa = aa + 1
		ap == ap + 1
		s == s + vn[i]
	elif(vn[i]<6 and vn[i]!=-1):
		ar == ar + 1
		ap == ap + 1
		s = s + vn[i]
	else:
		af == af + 1
	i = i + 1
x = ap + ar

i=0
while (vn[i] != max(vn)):
	i = i + 1
print(af)
print(aa)
print(ar)
print(round(s/x, 2))
print(va[i])

		
-- EXECUTION TIME:
0.353118
-- ERROR:
/home/codebench/codes/1766/1580/main.py:31: RuntimeWarning: divide by zero encountered in long_scalars
  print(round(s/x, 2))

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 18:51:55) 
-- CODE:
from numpy import*
vn = array(eval(input()))
va = array(eval(input()))
msg = 0
i = 0
aa = 0
ar = 0
af = 0
s = 0
ap = 0
while(i < size(vn)):
	if(vn[i]>=6):
		aa = aa + 1
		ap == ap + 1
		s == s + vn[i]
	elif(vn[i]<6 and vn[i]!=-1):
		ar == ar + 1
		ap == ap + 1
		s = s + vn[i]
	else:
		af == af + 1
	i = i + 1
x = aa + ar

i=0
while (vn[i] != max(vn)):
	i = i + 1
print(af)
print(aa)
print(ar)
print(round(s/x, 2))
print(va[i])

		
-- EXECUTION TIME:
0.570955
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
0
4
0
3.75
A
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
0
0
0
inf
JULIA
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
0
7
0
1.48
HELOISA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 18:54:19) 
-- CODE:
from numpy import*
vn = array(eval(input()))
va = array(eval(input()))

i = 0
aa = 0
ar = 0
af = 0
s = 0

while(i < size(vn)):
	if(vn[i]>=6):
		aa = aa + 1
		s = s + vn[i]
	elif(vn[i]<6 and vn[i]!=-1):
		ar = ar + 1
		s = s + vn[i]
	else:
		af = af + 1
	i = i + 1
x = aa + ar

i=0
while (vn[i] != max(vn)):
	i = i + 1
print(af)
print(aa)
print(ar)
print(round(s/x, 2))
print(va[i])

		
-- EXECUTION TIME:
0.374052
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
5
5.0
A
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
6
0
5
3.4
JULIA
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
0
7
4
6.39
HELOISA
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
